corrected margins on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -129,6 +129,10 @@ section#about > div{
         min-height: 600px;
     }
 
+    .about__text{
+        margin-left: var(--space-bigger);
+    }
+
     .about__text > div {
         align-items: flex-start;
     }
